--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,12 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">26,867</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">53,548</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testSecnarios.VerifyUpdatedTipValue</td><td><a href="#m0">UpdateTipValueAndVerifyTipAmountAndTotalBillAmount</a></td><td rowspan="1">1570944077234</td><td rowspan="1">7056</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.wundermobility.fastip.tests.VerifyTotalBillValue</td><td><a href="#m0">VerifyTipAmountAndTotalBillAmount</a></td><td rowspan="1">1570947148809</td><td rowspan="1">3210</td></tr><tr class="passedodd"><td rowspan="1">com.wundermobility.fastip.tests.VerifyUpdatedTipValue</td><td><a href="#m1">UpdateTipValueAndVerifyTipAmountAndTotalBillAmount</a></td><td rowspan="1">1570947121688</td><td rowspan="1">6309</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testSecnarios.VerifyUpdatedTipValue#UpdateTipValueAndVerifyTipAmountAndTotalBillAmount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">com.wundermobility.fastip.tests.VerifyTotalBillValue#VerifyTipAmountAndTotalBillAmount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.wundermobility.fastip.tests.VerifyUpdatedTipValue#UpdateTipValueAndVerifyTipAmountAndTotalBillAmount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
